crates/architecture/src/modular/snapshots/konstruo_architecture__modular__module__tests__get_face_rectangles_no_openings.snap
---
source: crates/architecture/src/modular/module.rs
assertion_line: 307
expression: rectangles
---
- - - -5
    - -4
    - -1.5
  - - 5
    - -4
    - -1.5
  - - 5
    - -4
    - 1.5
  - - -5
    - -4
    - 1.5
- - - -5
    - 4
    - 1.5
  - - 5
    - 4
    - 1.5
  - - 5
    - 4
    - -1.5
  - - -5
    - 4
    - -1.5
- - - -5
    - -4
    - 1.5
  - - -5
    - 4
    - 1.5
  - - -5
    - 4
    - -1.5
  - - -5
    - -4
    - -1.5
- - - 5
    - -4
    - -1.5
  - - 5
    - 4
    - -1.5
  - - 5
    - 4
    - 1.5
  - - 5
    - -4
    - 1.5
- - - -5
    - -4
    - 1.5
  - - 5
    - -4
    - 1.5
  - - 5
    - 4
    - 1.5
  - - -5
    - 4
    - 1.5
- - - -5
    - 4
    - -1.5
  - - 5
    - 4
    - -1.5
  - - 5
    - -4
    - -1.5
  - - -5
    - -4
    - -1.5
