crates/architecture/src/modular/snapshots/konstruo_architecture__modular__module__tests__get_face_rectangles_with_openings.snap
---
source: crates/architecture/src/modular/module.rs
assertion_line: 352
expression: rectangles
---
- - - -5
    - -4
    - -1.5
  - - -2.666667
    - -4
    - -1.5
  - - -2.666667
    - -4
    - 1.5
  - - -5
    - -4
    - 1.5
- - - -2.666667
    - -4
    - -1.5
  - - -0.666667
    - -4
    - -1.5
  - - -0.666667
    - -4
    - -0.5
  - - -2.666667
    - -4
    - -0.5
- - - -0.666667
    - -4
    - -1.5
  - - 1.666666
    - -4
    - -1.5
  - - 1.666666
    - -4
    - 1.5
  - - -0.666667
    - -4
    - 1.5
- - - 1.666666
    - -4
    - -1.5
  - - 2.666666
    - -4
    - -1.5
  - - 2.666666
    - -4
    - -1
  - - 1.666666
    - -4
    - -1
- - - 2.666666
    - -4
    - -1.5
  - - 5
    - -4
    - -1.5
  - - 5
    - -4
    - 1.5
  - - 2.666666
    - -4
    - 1.5
- - - 5
    - 4
    - -1.5
  - - 2
    - 4
    - -1.5
  - - 2
    - 4
    - 1.5
  - - 5
    - 4
    - 1.5
- - - 2
    - 4
    - -1.5
  - - -2
    - 4
    - -1.5
  - - -2
    - 3.9999998
    - -0.5
  - - 2
    - 4
    - -0.5
- - - -2
    - 4
    - -1.5
  - - -5
    - 4
    - -1.5
  - - -5
    - 4
    - 1.5
  - - -2
    - 4
    - 1.5
- - - -5
    - -4
    - 1.5
  - - -5
    - 4
    - 1.5
  - - -5
    - 4
    - -1.5
  - - -5
    - -4
    - -1.5
- - - 5
    - -4
    - -1.5
  - - 5
    - 4
    - -1.5
  - - 5
    - 4
    - 1.5
  - - 5
    - -4
    - 1.5
- - - -5
    - -4
    - 1.5
  - - 5
    - -4
    - 1.5
  - - 5
    - 4
    - 1.5
  - - -5
    - 4
    - 1.5
- - - -5
    - 4
    - -1.5
  - - 5
    - 4
    - -1.5
  - - 5
    - -4
    - -1.5
  - - -5
    - -4
    - -1.5
